Adding bootstrap elements to page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://kit.fontawesome.com/70fcd40144.js" crossorigin="anonymous"></script>
     <script>
     $( function() {
       $( "#datepicker" ).datepicker();
@@ -18,25 +19,56 @@
     <title>Trip Planner</title>
 </head>
 <body>
-    <h1>Trip Planner</h1>
-
-    <div class="input-group">
-      <div class="form-outline">
-        <input type="search" id="form1" class="form-control" />
-        <label class="form-label" for="form1">Search</label>
-      </div>
-      <button type="button" class="btn btn-primary">
-        <i class="fas fa-search"></i>
-      </button>
-    </div>
-
-    Date: <div id="datepicker"></div>
-
   
+  <div class = "p-4 bg-dark text-light">
+    <div class = "container text-center">
+    <h1>Trip Planner</h1>
+    </div>
+  </div>
+
+  <!--code for the search field-->
+  <div class="container-fluid">
+    <div class=row>
+
+      <div class="col-md-3 pl-2">
+          Date: <div id="datepicker"></div>
+          <br>
+          <div class="card" style="width: 20rem;">
+            <div class="card-body bg-light">
+              <h6>Search: </h6>
+              <form class="form-inline">
+                <div class="form-group">
+                  <input type="text" class="form-control" id="city-input">
+                </div>
+                  <button id="search-button" type="submit" class="btn btn-primary"><i
+                  class="fas fa-search"></i></button>
+              </form>
+            </div>
+                <ul class="list-group">
+                  <li class="list-group-item">previous search</li>
+                </ul>
+          </div>
+      </div>
+      <div class ="col-md-8">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Weather</h5>
+          </div>
+        </div>
+        <br>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Available Flights</h5>
+          </div>
+        </div>   
+      </div>
+
+    </div>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <!-- jQuery UI <script> tag -->
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>  
