--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <title>Trip Planner</title>
 </head>
 
-<body>
+<body id="bg">
 
-  <div class="p-4 bg-dark text-light">
+  <div id='bg' class="p-4 bg-dark text-light">
     <div class="container text-center">
-      <h1>Trip Planner</h1>
+      <h1 class='h1'>Trip Planner</h1>
     </div>
   </div>
 
@@ -33,7 +33,10 @@
     <div class=row>
 
       <div class="col-md-3 pl-2">
-        Date: <div id="datepicker" class="date-picker"></div>
+        <div>
+          <h1 id='team' class='bg-light'>15</h1>
+        </div>
+        <!-- Date: <div id="datepicker" class="date-picker"></div> -->
         <br>
         <div class="card" style="width: 20rem;">
           <div class="card-body bg-light">
@@ -51,7 +54,7 @@
         </div>
       </div>
       <div class="col-md-8">
-        <div class="card">
+        <div class="card bg-light">
           <div id="weather-card" class="card-body">
             <h5 class="card-title">Weather</h5>
 
