Changing to events

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
   <script src="weatherapi.js"></script>
-  <script src="flightapi.js"></script>
+  <script src="eventapi.js"></script>
   <script src="hotelapi.js"></script>
 </body>
 
