--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body id="bg">
 
-  <div id='bg' class="p-4 bg-dark text-light">
+  <div id='bg' class="p-4 text-light">
     <div class="container text-center">
       <h1 class='h1'>Trip Planner</h1>
     </div>
