javascript updates for local storage

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
 
           <ul id="prevCity" class="list-group">
-            <li class="list-group-item">previous search</li>
+            <!-- <li class="list-group-item">previous search</li> -->
           </ul>
 
         </div>
