Fixing bugs and adding README

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h6>Search: </h6>
             <form class="form-inline">
               <div class="form-group">
-                <input type="text" class="form-control" id="city-input">
+                <input type="text" class="form-control" id="city-input" placeholder="Enter a U.S. city name">
               </div>
               <button id="search-button" type="submit" class="btn btn-primary" style="color:goldenrod;background-color: #6d8aac"><i class="fas fa-search"></i></button>
             </form>
@@ -167,8 +167,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="weatherapi.js"></script>
   <script src="eventapi.js"></script>
+  <script src="weatherapi.js"></script>
 </body>
 
 </html>
